@@ -22,6 +22,8 @@ SYSTEM_AWSTATS=$(INST_PREF)/var/www/awstats
 
 SYSTEM_FCGI=$(INST_PREF)/var/www/fcgi
 
+SYSTEM_SCOREBOARDS=$(INST_PREF)/var/www/scoreboards
+
 SYSTEM_MAIL_VIRTUAL=$(INST_PREF)/var/mail/virtual
 
 SYSTEM_MAKE_DIRS=/bin/mkdir -p
@@ -38,6 +40,7 @@ install:
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_LOG)/ispcp-arpl-msgr
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_VIRTUAL)
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_FCGI)
+	$(SYSTEM_MAKE_DIRS) $(SYSTEM_SCOREBOARDS)
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_AWSTATS)
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_MAIL_VIRTUAL)
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_APACHE_BACK_LOG)
@@ -60,6 +63,7 @@ uninstall:
 	rm -rf $(SYSTEM_LOG)
 	rm -rf $(SYSTEM_VIRTUAL)
 	rm -rf $(SYSTEM_FCGI)
+	rm -rf $(SYSTEM_SCOREBOARDS)
 	rm -rf $(SYSTEM_MAIL_VIRTUAL)
 	rm -rf $(SYSTEM_APACHE_BACK_LOG)
 	#rm -rf ./*~
