@@ -17,6 +17,15 @@
 LogFormat "%B" traff
 
 #
+# mod_cband configuration
+#
+
+<IfModule mod_cband.c>
+    CBandScoreFlushPeriod 10
+    CBandRandomPulse On
+</IfModule>
+
+#
 # Header End
 #
 
