@@ -68,6 +68,8 @@ CMD_RM = /bin/rm
 
 CMD_TAR = /bin/tar
 
+CMD_TOUCH = /usr/bin/touch
+
 CMD_USERADD = /usr/sbin/useradd
 
 CMD_USERDEL = /usr/sbin/userdel
@@ -110,6 +112,8 @@ ROOT_DIR = /var/www/ispcp
 GUI_ROOT_DIR = /var/www/ispcp/gui
 
 APACHE_WWW_DIR = /var/www/virtual
+
+SCOREBOARDS_DIR = /var/www/scoreboards
 
 #
 # PHP FastCGI data
