@@ -76,3 +76,4 @@ tar
 wget
 bash
 libnet-libidn-perl
+libapache2-mod-cband
