@@ -1,0 +1,52 @@
+<html>
+ <head>
+  <title>ispCP OMEGA - ERROR</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="robots" content="noindex">
+  <meta name="robots" content="nofollow">
+  <script type="text/javascript">
+  //<![CDATA[
+    function get_path()
+    {
+        if (document.location.pathname != undefined) {
+            return document.location.pathname.replace( /[<]/g, "&lt;").replace(/[>]/g, "&gt;");
+        } else {
+            return "&nbsp;";
+        }
+    }
+  //]]>
+  </script>
+ </head>
+ <body style="color:#000000;">
+ <table width="100%" height="100%" align="center" cellpadding="0" cellspacing="0">
+  <tr>
+    <td>
+     <table width="453" style="border:solid 1px #CCCCCC;" align="center" cellpadding="0" cellspacing="0">
+      <tr>
+       <td>
+        <table width="453" border="0" align="center" cellpadding="0" cellspacing="0">
+         <tr>
+          <td width="453" height="69" background="/errors/error_top.jpg">&nbsp;</td>
+         </tr>
+         <tr>
+          <td>
+           <table width="453" border="0" cellpadding="0" cellspacing="1">
+            <tr>
+             <td align="center" valign="middle" bgcolor="#FFFFFF"></strong>
+              <h2><font color="#FF0000">Error 503!</font></h2><br />
+              <b><script type="text/javascript"> document.write(get_path()); </script><noscript>&nbsp;</noscript></b><br />
+              Service Unavailable!
+            </td>
+           </tr>
+          </table>
+         </td>
+        </tr>
+       </table>
+      </td>
+     </tr>
+    </table>
+   </td>
+  </tr>
+ </table>
+</body>
+</html>
