@@ -1,0 +1,40 @@
+<html>
+ <head>
+  <title>ispCP OMEGA - Bandwidth Exceeded</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="robots" content="noindex">
+  <meta name="robots" content="nofollow">
+ </head>
+ <body style="color:#000000;">
+ <table width="100%" height="100%" align="center" cellpadding="0" cellspacing="0">
+  <tr>
+    <td>
+     <table width="453" style="border:solid 1px #CCCCCC;" align="center" cellpadding="0" cellspacing="0">
+      <tr>
+       <td>
+        <table width="453" border="0" align="center" cellpadding="0" cellspacing="0">
+         <tr>
+          <td width="453" height="69" background="/errors/error_top.jpg">&nbsp;</td>
+         </tr>
+         <tr>
+          <td>
+           <table width="453" border="0" cellpadding="0" cellspacing="1">
+            <tr>
+             <td align="center" valign="middle" bgcolor="#FFFFFF"></strong>
+              <h2><font color="#FF0000">Bandwidth Exceeded!</font></h2><br />
+              Your request could not be completed because the customer's bandwidth limit was reached. <br/>
+              This limit is reset weekly so you might want to try again in a few days.
+            </td>
+           </tr>
+          </table>
+         </td>
+        </tr>
+       </table>
+      </td>
+     </tr>
+    </table>
+   </td>
+  </tr>
+ </table>
+</body>
+</html>
